REST API route 경로 Update

--- a/src/main/resources/templates/article_search.html
+++ b/src/main/resources/templates/article_search.html
@@ -22,7 +22,7 @@
     <!-- 글 정보 -->
     <div th:if="${pageable.hasResult}" th:each="article : ${article}" class="article">
             <!-- 글 제목 링크 -->
-        <a th:href="@{/article/detail/{id}(id=${article.id})}">
+        <a th:href="@{/articles/{id}(id=${article.id})}">
             <h2 class="overflow-text bold" th:text="${article.title}"></h2></br>
         </a>
         <!-- 글 내용 -->
@@ -39,7 +39,7 @@
             <ul id="tag-list" >
 
                 <li th:if="${article.tagConents != null}" th:each="tag : ${article.tagConents}">
-                    <a th:href="'/articles/search?tagsearch=true&query=' + ${tag}">
+                    <a th:href="'/articles?tagsearch=true&query=' + ${tag}">
                         <span th:text="'#' + ${tag}" class="tag-text"></span>
                     </a>
                 </li>
@@ -63,7 +63,7 @@
         <ul class="pagination">
             <li class="page-item">
                 <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
-                <a class="page-link" th:classappend=" ${!pageable.previous} ? 'disabled' " th:href="${!pageable.first} ? @{/articles/search(query=${query},sort=${sort},page=${pageable.number})}"> 이전 </a>
+                <a class="page-link" th:classappend=" ${!pageable.previous} ? 'disabled' " th:href="${!pageable.first} ? @{/articles(query=${query},sort=${sort},page=${pageable.number})}"> 이전 </a>
             </li>
             <!-- 시작페이지 -> 끝 페이지 까지 페이지 출력 -->
             <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
@@ -71,12 +71,12 @@
                     <!-- 현재페이지는 링크 없이 숫자만 -->
                      <a class="page-link active" th:if="${page == pageable.number + 1}" href="javascript:;" th:text="${page}"></a>
                     <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
-                     <a class="page-link" th:unless="${page == pageable.number + 1}" th:href="@{/articles/search(query=${query},sort=${sort},page=${page})}" th:text="${page}"></a>
+                     <a class="page-link" th:unless="${page == pageable.number + 1}" th:href="@{/articles(query=${query},sort=${sort},page=${page})}" th:text="${page}"></a>
                 </li>
             </span>
             <li class="page-item">
                 <!-- 다음 링크 있을시 활성화 없을시 비 활성화 -->
-                <a class="page-link" th:classappend=" ${!pageable.next} ? 'disabled' "  th:href="${pageable.last} ? '#' : @{/articles/search(query=${query},sort=${sort},page=${pageable.number+2})}"> 다음 </a>
+                <a class="page-link" th:classappend=" ${!pageable.next} ? 'disabled' "  th:href="${pageable.last} ? '#' : @{/articles(query=${query},sort=${sort},page=${pageable.number+2})}"> 다음 </a>
             </li>
         </ul>
     </div>
@@ -113,7 +113,7 @@
                 var sort = $('#sort-select').val();
                 var search = $('#search-select').val();
                 if (query) {
-                    window.location.href = '/articles/search?query=' + encodeURIComponent(query) + '&sort=' + sort + '&search=' + search;
+                    window.location.href = '/articles?query=' + encodeURIComponent(query) + '&sort=' + sort + '&search=' + search;
                 }
             }
         });
