--- a/src/main/resources/templates/article_write.html
+++ b/src/main/resources/templates/article_write.html
@@ -128,7 +128,7 @@
               　  , processData: false // FormData를 사용하면 processData를 false로 설정해야 함
                   , contentType: false // 파일 업로드 시에는 contentType을 false로 설정해야 함
               　 　, data: formData
-              　 　, url: '/api/article/write'
+              　 　, url: '/api/articles'
               　 　, success: function(data) {
                       location.href='/';
               　 　}
