--- a/src/main/resources/templates/send_note.html
+++ b/src/main/resources/templates/send_note.html
@@ -57,7 +57,7 @@
                                         receiver_email : recipient,
                                         message : message
                                     })
-                                　　, url: '/api/note/save'
+                                　　, url: '/api/notes'
                                 　　, success: function(data) {
                                        alert(data);
                                        window.close();
