--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -17,7 +17,7 @@
     <!-- 수정/삭제 버튼 -->
     <div class="article_button" sec:authorize="isAuthenticated()">
         <!-- 수정 버튼 -->
-        <button th:if="${article.member.id == @authenticationUtil.getCurrentMember()?.id}" class="button_blue btn btn-primary" th:onclick="|location.href='@{/article/update/{id}(id=${article.id})}'|">수정하기</button>
+        <button th:if="${article.member.id == @authenticationUtil.getCurrentMember()?.id}" class="button_blue btn btn-primary" th:onclick="|location.href='@{/articles/{id}/edit(id=${article.id})}'|">수정하기</button>
         <!-- 삭제 버튼 -->
         <button th:if="${article.member.id == @authenticationUtil.getCurrentMember()?.id}" onclick="articleDelete()" class="button_red btn btn-danger" >삭제하기</button>
     </div>
@@ -39,7 +39,7 @@
         <span class="article_addtext" th:text="${article.viewcount}"></span></br>
         <div class="list-group" style="position:absolute; display:none; margin-top:10px" id="noteSend_Window">
             <ul>
-                <a th:href="@{/profilepage(userid=${article.member.id},type=article_list)}" class="list-group-item list-group-item-action">
+                <a th:href="@{/profile(userid=${article.member.id},type=article_list)}" class="list-group-item list-group-item-action">
                     프로필
                 </a>
                 <li sec:authorize="isAuthenticated()">
@@ -135,7 +135,7 @@
         <ul class="pagination">
             <li class="page-item">
                 <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
-                <a class="page-link" th:classappend=" ${!pageable.previous} ? 'disabled' " th:href="${!pageable.first} ? @{/article/detail/{id}(id=${article.id},page=${pageable.number})}"> 이전 </a>
+                <a class="page-link" th:classappend=" ${!pageable.previous} ? 'disabled' " th:href="${!pageable.first} ? @{/articles/{id}(id=${article.id},page=${pageable.number})}"> 이전 </a>
             </li>
             <!-- 시작페이지 -> 끝 페이지 까지 페이지 출력 -->
             <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
@@ -143,12 +143,12 @@
                     <!-- 현재페이지는 링크 없이 숫자만 -->
                      <a class="page-link active" th:if="${page == pageable.number + 1}" href="javascript:;" th:text="${page}"></a>
                     <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
-                     <a class="page-link" th:unless="${page == pageable.number + 1}" th:href="@{/article/detail/{id}(id=${article.id},page=${page})}" th:text="${page}"></a>
+                     <a class="page-link" th:unless="${page == pageable.number + 1}" th:href="@{/articles/{id}(id=${article.id},page=${page})}" th:text="${page}"></a>
                 </li>
             </span>
             <li class="page-item">
                 <!-- 다음 링크 있을시 활성화 없을시 비 활성화 -->
-                <a class="page-link" th:classappend=" ${!pageable.next} ? 'disabled' "  th:href="${pageable.last} ? '#' : @{/article/detail/{id}(id=${article.id},page=${pageable.number + 2})}"> 다음 </a>
+                <a class="page-link" th:classappend=" ${!pageable.next} ? 'disabled' "  th:href="${pageable.last} ? '#' : @{/articles/{id}(id=${article.id},page=${pageable.number + 2})}"> 다음 </a>
             </li>
         </ul>
     </div>
@@ -180,15 +180,10 @@
                    $("#bookmark").click(function() {
                     var $bookmark = $("#bookmark").toggleClass("active");
                     if($bookmark.hasClass("active")) {
-
-                             var obj = {};
-                             obj.id = articleId;
-                             obj.type = "create";
                              $.ajax({
                                 　　type:'post'
                                 　　, contentType:'application/json'
-                                   , data:JSON.stringify(obj)
-                                　　, url: '/api/bookmark/update'
+                                　　, url: '/api/bookmarks/' + articleId
                                 　　, success: function(data) {
                                 　　}
                                    , beforeSend : function(xhr) {
@@ -200,15 +195,10 @@
                                 });
                     }
                     else {
-
-                             var obj = {};
-                             obj.id = articleId;
-                             obj.type = "delete";
                              $.ajax({
-                                　　type:'post'
+                                　　type:'delete'
                                 　　, contentType:'application/json'
-                                   , data:JSON.stringify(obj)
-                                　　, url: '/api/bookmark/update'
+                                　　, url: '/api/bookmarks/' + articleId
                                 　　, success: function(data) {
                                 　　}
                                     , beforeSend : function(xhr) {
@@ -236,7 +226,7 @@
                      });
 
                      $('#open-message-btn').click(function() {
-                          window.open('/sendnote?id=' + [[${article.member.email}]], '쪽지 보내기', 'width=400,height=420');
+                          window.open('/notes/new?id=' + [[${article.member.email}]], '쪽지 보내기', 'width=400,height=420');
                      });
                    });
 
@@ -249,7 +239,7 @@
                      $.ajax({
                         　　type:'delete'
                         　　, contentType:'application/json'
-                        　　, url: '/api/article/delete/' + articleId
+                        　　, url: '/api/articles/' + articleId
                         　　, success: function(data) {
                                 modal.hide();
                                  location.href='/';
@@ -275,9 +265,9 @@
                                 　　type:'post'
                                 　　, contentType:'application/json'
                                 　　, data: JSON.stringify(obj)
-                                　　, url: '/api/comment/write'
+                                　　, url: '/api/comments'
                                 　　, success: function(data) {
-                                        window.location.href = '/article/detail/' + articleId;
+                                        window.location.href = '/articles/' + articleId;
                                 　　}
                                    , beforeSend : function(xhr) {
                                       xhr.setRequestHeader(header, token);
@@ -295,9 +285,9 @@
                    $.ajax({
                         　　type:'delete'
                         　　, contentType:'application/json'
-                        　　, url: '/api/comment/delete/' + commentId
+                        　　, url: '/api/comments/' + commentId
                         　　, success: function(data) {
-                                 window.location.href = '/article/detail/' + articleId;
+                                 window.location.href = '/articles/' + articleId;
                         　　}
                            , beforeSend : function(xhr) {
                                       xhr.setRequestHeader(header, token);
@@ -329,9 +319,9 @@
                             　　type:'post'
                             　　, contentType:'application/json'
                             　　, data: JSON.stringify(obj)
-                            　　, url: '/api/reply/write'
+                            　　, url: '/api/replys'
                             　　, success: function(data) {
-                                    window.location.href = '/article/detail/' + articleId;
+                                    window.location.href = '/articles/' + articleId;
                             　　}
                                 , beforeSend : function(xhr) {
                                       xhr.setRequestHeader(header, token);
